--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
    <div class="_stage _pos">
       <div class="_position-middle _position-center" style="text-align:center;">
         <img src="images/sjee-logo.svg">
-        <a href="http://github.com/sjeedandi" role="button" class="btn btn-lg btn-default">Go to github.com</a>
+        <br>
+        <a href="http://github.com/sjeedandi" role="button" class="btn btn-lg btn-link">Visit on Github</a>
         <!-- <a href="http://twitter.com/sjeedandi"><i class="fa fa-twitter fa-3x"></i></a> -->
       </div>
     </div>
